--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,33 @@
     <groupId>com.javaexample</groupId>
     <artifactId>docker-build-with-jenkins-sample</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+    <dependencies>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+         <version>3.8.1</version>
+         <scope>test</scope>
+     </dependency>
+   </dependencies>
 
 <build>
     <finalName>docker-build-with-jenkins-sample</finalName>
+    <plugins>
+       <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.3</version>
+         <executions>
+          <execution>
+             <phase>package</phase>
+           </execution>
+          </executions>
+         </plugin>
+       </plugins>
+      
 </build>
+     
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
