--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,11 @@
     <plugins>
        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.3</version>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+              <webXml>WebContent\WEB-INF\web.xml</webXml>
+         </configuration>
          <executions>
           <execution>
              <phase>package</phase>
