--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,10 @@
        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
-          <version>2.2</version>
-          <configuration>
-              <webXml>WebContent\WEB-INF\web.xml</webXml>
+          <version>2.1.1</version>
+          <extensions>false</extensions>
+         <configuration>
+                  <failOnMissingWebXml>false</failOnMissingWebXml>
          </configuration>
          <executions>
           <execution>
